[gd_scene load_steps=3 format=3 uid="uid://touch_controls"]

[ext_resource type="Script" path="res://scripts/ui/touch_controls.gd" id="1_touch"]
[ext_resource type="Theme" path="res://assets/themes/minimal_mono_theme.tres" id="2_theme"]

[node name="TouchControls" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("2_theme")
script = ExtResource("1_touch")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/separation = 10

[node name="Touchpad" type="Panel" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
mouse_filter = 2

[node name="Label" type="Label" parent="HBoxContainer/Touchpad"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -14.0
offset_right = 50.0
offset_bottom = 14.0
grow_horizontal = 2
grow_vertical = 2
text = "swipe to aim"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.0
mouse_filter = 2
theme_override_constants/separation = 10

[node name="ConfirmButton" type="Button" parent="HBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
size_flags_vertical = 3
focus_mode = 0
text = "MOVE
(confirm)"

[node name="LookButton" type="Button" parent="HBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.75
focus_mode = 0
text = "look
mode"
